# EnvSync

./: README.md  docker-compose.yml
backend/: pom.xml
backend/src/main/java/com/envsync/backend/: BackendApplication.java  SecurityConfig.java  test.java
backend/src/main/resources/: application.properties
backend/src/test/java/com/envsync/backend/: BackendApplicationTests.java
cli/: .gitignore  build.sh  envsync-linux  envsync-mac  go.mod  go.sum  main.go
cli/cmd/: diff.go  pull.go  push.go  root.go  set.go  unset.go
cli/envsync-cli/: Cargo.toml
cli/envsync-cli/src/: main.rs
cli/envsync-cli/src/api/: auth.rs
cli/envsync-cli/src/commands/: init.rs
frontend/: README.md  package-lock.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/secure/: route.ts
frontend/src/app/client/: page.tsx
frontend/src/app/public/: page.tsx
frontend/src/app/server/: page.tsx
frontend/src/lib/: auth.ts
frontend/src/types/: next-auth.d.ts
