[package]
name = "envsync-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = "4.5.60"
comfy-table = "7.2.2"
console = "0.16.2"
ctrlc = "3.5.2"
dialoguer = "0.12.0"
directories = "6.0.0"
dotenvy = "0.15.7"
indicatif = "0.18.4"
reqwest = { version = "0.13.2", features = ["form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sodiumoxide = "0.2.7"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"
chrono = "0.4.44"
toml = "1.0.3"
